--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^5.0.1",
     "stylis-plugin-rtl": "^2.1.0",
