--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.23.1",
     "axios": "^1.4.0",
+    "axois": "^0.0.1-security",
     "history": "^5.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
