--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.23.1",
+    "aws-amplify": "^5.3.4",
     "axios": "^1.4.0",
     "history": "^5.3.0",
     "prop-types": "^15.7.2",
