--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "react-date-range": "^1.4.0"
   }
 }
