--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "axios-mock-adapter": "^1.18.1",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
+    "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.6.2",
     "react-test-renderer": "^18.2.0",
     "react-testing-library": "^8.0.1"
