--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axois": "^0.0.1-security",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
+    "jszip": "^3.10.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
