--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "aws-amplify": "^5.3.5",
     "axios": "^1.4.0",
     "axois": "^0.0.1-security",
+    "chromedriver": "^115.0.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "jszip": "^3.10.1",
@@ -33,6 +34,7 @@
     "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^5.0.1",
+    "selenium-webdriver": "^4.11.1",
     "stylis-plugin-rtl": "^2.1.0",
     "web-vitals": "^1.1.1"
   },
