--- a/frontend/amplify/backend/backend-config.json
+++ b/frontend/amplify/backend/backend-config.json
@@ -94,7 +94,7 @@
     }
   },
   "auth": {
-    "frontend4bc2862d": {
+    "frontend05785438": {
       "customAuth": false,
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
@@ -155,35 +155,35 @@
     }
   },
   "parameters": {
-    "AMPLIFY_auth_frontend4bc2862d_nativeClientId": {
+    "AMPLIFY_auth_frontend05785438_nativeClientId": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "frontend4bc2862d"
+          "resourceName": "frontend05785438"
         }
       ]
     },
-    "AMPLIFY_auth_frontend4bc2862d_userPoolId": {
+    "AMPLIFY_auth_frontend05785438_userPoolId": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "frontend4bc2862d"
+          "resourceName": "frontend05785438"
         }
       ]
     },
-    "AMPLIFY_auth_frontend4bc2862d_userPoolName": {
+    "AMPLIFY_auth_frontend05785438_userPoolName": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "frontend4bc2862d"
+          "resourceName": "frontend05785438"
         }
       ]
     },
-    "AMPLIFY_auth_frontend4bc2862d_webClientId": {
+    "AMPLIFY_auth_frontend05785438_webClientId": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "frontend4bc2862d"
+          "resourceName": "frontend05785438"
         }
       ]
     },
