--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -118,6 +118,11 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "clearUSERSTest": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "createEPF": {
       "build": true,
       "providerPlugin": "awscloudformation",
@@ -301,6 +306,22 @@
         {
           "category": "function",
           "resourceName": "clearEPFTests"
+        }
+      ]
+    },
+    "AMPLIFY_function_clearUSERSTest_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "clearUSERSTest"
+        }
+      ]
+    },
+    "AMPLIFY_function_clearUSERSTest_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "clearUSERSTest"
         }
       ]
     },
